css/style.css
@charset "utf-8";

table.list {
	color:			white;
	margin-left:		auto;
	margin-right:		auto;
	border-collapse:	collapse;
	border:			solid 1px rgb(233, 141, 57);
}
table.list th {
	background-color:	rgb(233, 141, 57);
}
table.list th,
table.list td {
	padding:		0;
	margin:			0;
	border:			solid 1px rgb(203, 121, 47);
	text-align:		center;
}
table.list td.list-rate {
	text-align:		center;
	border:			none;
	height:			33px;
}
table.list td.list-abstract {
	border-top:		none;
	vertical-align:		top;
	text-align:		left;
	text-indent:		1em;
}
img.list-pic {
	width:			200px;
}
table.list tr.list-row0 td {
	background-color:	rgb(255, 200, 127);
}
table.list tr.list-row1 td {
	background-color:	rgb(243, 161, 87);
}
/* view */
#view-address {
	float:			left;
	width:			50%;
}
#view-contract,
#view-builtdate {
	float:			left;
	width:			20%;
	margin-left:		5%;
}
/*-----吹き出し-----*/
/* balloon common */
div.balloon-wrapper {
	width:			520px;
	margin:			15px auto;
}
p.balloon-left,
p.balloon-right {
	position:		relative;
	z-index:		1;
	width:			400px;
	margin:			15px auto;
	padding:		13px;
	background-color:	#fff;
	border-width:		3px;
	border-style:		solid;
	border-radius:		10px;
}
p.balloon-left::before,
p.balloon-right::before {
	content:		"";
	display:		block;
	position:		absolute;
	z-index:		10;
	top:			10px;
	width:			0;
	height:			0;
	border:			15px solid transparent;
}
p.balloon-left::after,
p.balloon-right::after {
	content:		"";
	display:		block;
	position:		absolute;
	z-index:		100;
	top:			10px;
	width:			0;
	height:			0;
	border:			15px solid transparent;
}

/* balloon left */
p.balloon-left {
	float:			right;
	border-color:		rgb(203, 121, 47);
}
p.balloon-left::before {
	left:			-31px;
	border-right:		15px solid rgb(203, 121, 47);
}
p.balloon-left::after {
	left:			-26px;
	border-right:		15px solid #ffffff;
}

/* balloon right */
p.balloon-right {
	float:			left;
	border-color:		rgb(255, 200, 127);
}
p.balloon-right::before {
	right:			-31px;
	border-left:		15px solid rgb(255, 200, 127);
}
p.balloon-right::after {
	right:			-26px;
	border-left:		15px solid #ffffff;
}
/* balloon left icon */
.balloon-left-img{
	width:			70px;
	margin:			15px 0 15px;
	float:			left;
}
/* balloon right icon */
.balloon-right-img{
	width:			70px;
	margin:			15px 0 15px;
	float:			right;
}
.clear-p{
	position:		relative;
	clear:			both;
	width:			100%;
	height:			1px;
	margin:			0px;
}
/* -------------------------------------------- */
/* 詳細情報 */
.detail_photo {
	width:			25%;
	float:			left;
}
.detail_msg {
	margin-left:		1%;
	width:			74%;
	float:			left;
}
.detail_msg canvas {
	position:		absolute;
}
/* -------------------------------------------- */
.score,
.like {
	margin:			0 1em 0;
	float:			left;
}
.score img,
.like img,
.like span {
	vertical-align:		middle;
}
/* -------------------------------------------- */
.clearfix:after {
	display:		block;
	clear:			both;
	height:			0px;
	visibility:		hidden;
	content:		".";
}
#header {
	position:		fixed;
	z-index:		2147483647;
	top:			0;
	width:			100%;
	margin:			0;
	padding:		0;
	background-color:	white;
}
#logo {
	margin:			0 10%;
}
#user {
	float:			right;
	color:			white;
	margin:			0 10%;
}
#user a {
	color:			white;
}
#nav {
	color:			white;
	background-color:	rgb(233, 141, 57);
	height:			1.5em;
}
#nav ul {
	list-style-type:	none;
	padding:		0;
	margin:			0 10%;
}
#nav ul li {
	float:			left;
}
#nav a {
	display:		block;
	color:			white;
	height:			1.5em;
	padding-left:		1em;
	padding-right:		1em;
}
#nav a span {
	vertical-align:		middle;
}
#main {
	margin-top:		6em;
	padding:		1em;
}
#menu {
	float:			left;
	width:			10%;
}
#content {
	margin-left:		11%;
}
/* */
.hidden {
	display:		none;
}
/* */
.listlink {
	text-align:		center;
}
/* */
h1 {
	color:			rgb(233, 141, 57);
	margin:			0.2em;
}

h2.none {
	background-color:	#D0D0FF;;
	border-bottom-style:	none;
}
h2, h3 {
	border-bottom-style:	solid;
	border-bottom-width:	1px;
	border-left-style:	solid;
	border-left-width:	10px;
	padding-left:		5px;
	color:			rgb(233, 141, 57);
}
/* */
a {
	text-decoration:	none;		/* do not show underline */
}
a:hover {
	background-color:	#ADD8E6;	/* light blue */
}
a:link,
a:visited {
	color:			#4169E1;	/* royal blue */
}
/* */
u.dashed {
	text-decoration:	none;
	border-bottom:		1px black dashed;
}
/* */
body {
	margin:			0;
	padding:		0;
	color:			#444444;
	background-color:	#FFFFFF;
}
/* XXX: should be for QuickHTML only... */
form table {
	margin:			0 auto;
	max-width:		80%;
}
/* */
p.remark {
	/* margins of top and bottom are inherited. */
	margin-left:		3em;
	margin-right:		3em;
	background-color:	#D0D0FF;
	border-width:		1px;
	border-style:		dashed;
	padding:		1em;
	display:		block;
	position:		relative;
}
/* */
table tbody tr td.form-header {
	white-space:		nowrap;
	border-style:		none none solid solid;
	border-width:		0 0 2px 10px;
	border-color:		rgb(233, 141, 57);
}
/* */
img.inline {
	vertical-align:		middle;
}
/* */
pre {
	white-space:		-moz-pre-wrap;
	white-space:		-pre-wrap;
	white-space:		-o-pre-wrap;
	white-space:		pre-wrap;
	word-wrap:		break-word;

}
pre, code {
	margin-top:		1em;
	margin-bottom:		1em;
	margin-left:		3em;
	margin-right:		3em;
	background-color:	#D0D0FF;
	border-style:		solid;
	border-width:		1px;
	padding:		1em;
	display:		block;
	position:		relative;
}
/* */
em {
	font-style:		normal;
	font-weight:		bold;
	color:			red;
}
dfn {
	font-style:		normal;
	font-weight:		bold;
	color:			red;
}
/* */
.error {
	font-weight:		bold;
	color:			red;
}
/* */
#alert-dialog-container {
	padding:		0 .7em;
}

#error-message,
#alert-dialog-message {
	display:		block;
	margin-left:		2em;
}

#error-container p,
#alert-dialog-container p {
	margin:			1em;
}

#error-container .ui-icon,
#alert-dialog-container .ui-icon {
	float:			left;
	margin:			0.2em;
}

